More changes to yasb/config.yaml

--- a/yasb/config.yaml
+++ b/yasb/config.yaml
@@ -13,40 +13,37 @@ bars:
     alignment:
       position: "top"
       center: true
+    animation:
+      enabled: true
+      duration: 1000
     blur_effect:
       enabled: true 
       acrylic: true 
       dark_mode: true
-      round_corners: false
+      round_corners: true
       border_color: None
     window_flags:
       always_on_top: false
       windows_app_bar: true
     dimensions:
-      width: "100%"
+      width: "99%"
       height: 32
     padding:
-      top: 0
-      left: 0
+      top: 4
+      left: 4
       bottom: 0
-      right: 0
+      right: 4
     widgets:
       left: [
-          "home", 
-          "komorebi_workspaces",
-#          "komorebi_active_layout",
-          "active_window"
+          "home",
+          "media",
       ]
       center: [
-          "clock"
+          "komorebi_workspaces",
         ]
       right: [
-          "media",
-          "weather",
-          "disk",
           "volume",
-          "battery",
-          "notifications",
+          "clock",
           "power_menu"
       ]
 widgets:
@@ -85,33 +82,6 @@ widgets:
         left: 8
         bottom: 0
         right: 8
-#  komorebi_active_layout:
-#    type: "komorebi.active_layout.ActiveLayoutWidget"
-#    options:
-#      hide_if_offline: true
-#      label: "{icon}"
-#      layouts:
-#        [
-#          "bsp",
-#          "columns",
-#          "rows",
-#          "grid",
-#          "vertical_stack",
-#          "horizontal_stack",
-#          "ultrawide_vertical_stack",
-#          "right_main_vertical_stack",
-#        ]
-  active_window:
-    type: "yasb.active_window.ActiveWindowWidget"
-    options:
-      label: "{win[title]}"
-      label_alt: "[class_name='{win[class_name]}' exe='{win[process][name]}' hwnd={win[hwnd]}]"
-      label_no_window: ""
-      label_icon: true
-      label_icon_size: 14
-      max_length: 50
-      max_length_ellipsis: "..."
-      monitor_exclusive: true
   clock:
     type: "yasb.clock.ClockWidget"
     options:
@@ -146,54 +116,6 @@ widgets:
         next_track: "\udb81\udcad"
         play: "\udb81\udc0a"
         pause: "\udb80\udfe4"
-  weather:
-    type: "yasb.weather.WeatherWidget"
-    options:
-      label: "<span>{icon}</span> {temp}"
-      label_alt: "{location}: {conditions}, Min {min_temp}, Max {max_temp}, Humidity {humidity}"
-      api_key: '24b6c2cda6d84066b0304531241908'
-      update_interval: 600
-      hide_decimal: true
-      location: "Germany, Waiblingen"
-      units: "metric"
-      callbacks:
-        on_left: "toggle_card"
-      icons:
-        sunnyDay: "\udb81\udd99"
-        clearNight: "\ue3c2"
-        cloudyDay: "\ue21d"
-        cloudyNight: "\ue226"
-        rainyDay: "\ue371"
-        rainyNight: "\ue371"
-        snowyIcyDay: "\udb81\udf17"
-        snowyIcyNight: "\udb81\udf17"
-        blizzardDay: "\udb81\udd99"
-        default: "\udb81\udd99"
-      weather_card:
-        blur: true
-        round_corners: true
-        round_corners_type: "small"
-        border_color: "#7aa2f7"
-        alignment: "center"
-        direction: "down"
-        offset_top: 0
-        icon_size: 48
-  disk:
-    type: "yasb.disk.DiskWidget"
-    options:
-      label: "<span>\uf473</span> disks"
-      label_alt: "<span>\uf473</span>"
-      group_label:
-        volume_labels: [ "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z" ]
-        show_label_name: false
-        blur: true
-        round_corners: true
-        round_corners_type: "small"
-        border_color: '#7aa2f7'
-        alignment: 'center'
-        offset_top: 0
-      callbacks:
-        on_left: "toggle_group"
   volume:
     type: "yasb.volume.VolumeWidget"
     options:
@@ -215,25 +137,6 @@ widgets:
         offset_top: 0
       callbacks:
         on_right: "toggle_mute"
-  battery:
-    type: "yasb.battery.BatteryWidget"
-    options:
-      label: "<span>{icon}</span>{percent}%"
-      label_alt: "<span>{icon}</span> {percent}% | time: {time_remaining}"
-      #hide_unsupported: true
-      charging_options:
-        icon_format: "{charging_icon}" 
-  notifications:
-    type: "yasb.notifications.NotificationsWidget"
-    options:
-      label: "<span>\uf476</span> {count}"
-      label_alt: "{count} notifications"
-      hide_empty: true
-      tooltip: false
-      callbacks:
-        on_left: "toggle_notification"
-        on_right: "do_nothing"
-        on_middle: "toggle_label"
   power_menu:
     type: "yasb.power_menu.PowerMenuWidget"
     options:
