Changes to YASB config.yaml and added image.png

--- a/yasb/config.yaml
+++ b/yasb/config.yaml
@@ -54,12 +54,9 @@ widgets:
     options:
       label: "<span>\udb80\udf5c</span>"
       menu_list:
-        - { title: "Home", path: "~" }
+        - { title: "Home", path: "C:\\Users\\taylo" }
         - { title: "Downloads", path: "~\\Downloads"}
-        - { title: "Documents", path: "~\\Documents"}
         - { title: "Pictures", path: "C:\\Users\\taylo\\OneDrive\\Pictures"}
-        - { title: "Config", path: "C:\\Users\\taylo\\.config" }
-        - { title: "Screenshots", path: "C:\\Users\\taylo\\OneDrive\\Bilder\\Screenshots 1" }
       system_menu: true
       power_menu: false
       blur: true
